--- a/classroom/src/app/text-view/text-view.component.css
+++ b/classroom/src/app/text-view/text-view.component.css
@@ -1,33 +1,34 @@
-.badge {
-  /*border-radius: 5px;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;*/
-  pointer-events: none;
-  text-align: center;
-  box-sizing: border-box;
-  /*font-weight: 600;*/
-  /*font-size: x-small;*/
-  color: navy; /* color should be from theme as per https://material.angular.io/guide/theming-your-components */
-  /*background: #3f51b5;*/
-  /*padding-top: 2px;
-  padding-left: 3px;
-  padding-right: 3px;
-  margin-left: 5px;*/
-}
-.badge::before {
-  content: "[";
-}
-.badge::after {
-  content: "]";
-  margin-right: .5em;
-}
-.pattern {
-}
-
 .container {
   width: 100%;
   height: calc(100vh - 64.5px);
+}
+.sidebar {
+  overflow: auto;
+  height: 100%;
+}
+
+.tooltip-icon {
+  font-size: small;
+}
+.cluster-detail {
+  overflow: hidden;
+}
+.cluster-row td {
+  border-bottom-width: 0;
+}
+tr.cluster-detail-row {
+  height: 0;
+  min-height: 0;
+}
+
+.pattern-table {
+  margin-left: 3em;
+  overflow: auto;
+  max-height: calc(30vh);
+}
+
+.mat-column-count {
+  text-align: right;
 }
 
 .text_content {
@@ -35,15 +36,4 @@
   padding-right: 18px;
   line-height: 175%;
   max-width: 6.5in;
-}
-
-summary {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.sidebar {
-  overflow: auto;
-  height: 100%;
 }
