--- a/classroom/src/app/report/report.component.html
+++ b/classroom/src/app/report/report.component.html
@@ -2,7 +2,7 @@
 <!-- TODO: spinner for "Generating Reports..."? -->
 <mat-card *ngIf="corpus" class="container">
   <mat-card-title>Reports</mat-card-title>
-  <mat-card-subtitle>Generate reports using the below text for each document.</mat-card-subtitle>
+  <mat-card-subtitle>Generate reports using the below text.</mat-card-subtitle>
   <mat-card-content class="report_form">
     <mat-form-field class="edit_textarea">
       <textarea matInput placeholder="Customize the introduction text:" [(ngModel)]="corpus.intro" rows="6" cols="80"></textarea>
