--- a/classroom/src/app/nav/nav.component.html
+++ b/classroom/src/app/nav/nav.component.html
@@ -6,11 +6,11 @@
      [active]="bprla.isActive"
      matTooltip="Show Box Plot Graph">Box Plot</a>
   <a mat-tab-link
-     routerLink="/ranking"
+     routerLink="/frequency"
      queryParamsHandling="preserve"
      routerLinkActive #rrla="routerLinkActive"
      [active]="rrla.isActive"
-     matTooltip="Show Ranking Lists">Rankings</a>
+     matTooltip="Show Ranking Lists">Frequency</a>
   <a mat-tab-link
      routerLink="/scatterplot"
      queryParamsHandling="preserve"
