--- a/classroom/src/app/rank-graph/rank-graph.component.html
+++ b/classroom/src/app/rank-graph/rank-graph.component.html
@@ -67,8 +67,8 @@
       <div [euiTooltip]="bar_tip(element.value)">
       <svg [attr.width]="options.width+'px'" [attr.height]="options.height+'px'"
            [attr.data-value]="element.value*100">
-        <desc>A bar that shows the difference of {{element.value*100}} from the average of {{rank_data.average*100}}</desc>
-        <line [attr.x1]="scale(rank_data.average)" [attr.x2]="scale(rank_data.average)"
+        <desc>A bar that shows the difference of {{element.value*100}} from the median of {{rank_data.median*100}}</desc>
+        <line [attr.x1]="scale(rank_data.median)" [attr.x2]="scale(rank_data.median)"
               [attr.y1]="0" [attr.y2]="'100%'"
               [style.stroke]="'black'" [style.stroke-width]="'1px'"/>
         <rect [attr.x]="scale(mean_start(element.value))"
