Updates tab descriptions.

--- a/classroom/src/app/nav/nav.component.html
+++ b/classroom/src/app/nav/nav.component.html
@@ -4,19 +4,19 @@
      queryParamsHandling="preserve"
      routerLinkActive #bprla="routerLinkActive"
      [active]="bprla.isActive"
-     matTooltip="Show Box Plot Graph">Box Plot</a>
+     matTooltip="Corpus Analytics">Box Plot</a>
   <a mat-tab-link
      routerLink="/frequency"
      queryParamsHandling="preserve"
      routerLinkActive #rrla="routerLinkActive"
      [active]="rrla.isActive"
-     matTooltip="Show Ranking Lists">Frequency</a>
+     matTooltip="Category Frequency Analytics">Frequency</a>
   <a mat-tab-link
      routerLink="/scatterplot"
      queryParamsHandling="preserve"
      routerLinkActive #sprla="routerLinkActive"
      [active]="sprla.isActive"
-     matTooltip="Show Scatter Plot Graph">Scatter Plot</a>
+     matTooltip="Compare Categories">Scatter Plot</a>
   <a mat-tab-link
      routerLink="/patterns"
      queryParamsHandling="preserve"
@@ -38,33 +38,3 @@
      [active]="rla.isActive"
      matTooltip="Generate Reports">Reports</a>
 </nav>
-
-<!--<nav>-->
-  <!--<eui-linkbutton [selected]="is_current('/corpus')"
-                  [title]="'Go to corpus details.'"
-                  routerLink="/corpus">Corpus</eui-linkbutton>-->
-<!--  <eui-linkbutton [selected]="is_current('/boxplot')"
-                  [title]="'Go to Box Plot display.'"
-                  routerLink="/boxplot"
-                  queryParamsHandling="preserve">Box Plot</eui-linkbutton>
-  <eui-linkbutton [selected]="is_current('/ranking')"
-                  [title]="'Go to rankings list.'"
-                  routerLink="/ranking"
-                  queryParamsHandling="preserve"
->Rankings</eui-linkbutton>
-  <eui-linkbutton [selected]="is_current('/scatterplot')"
-                  [title]="'Go to scatter plot display.'"
-                  routerLink="/scatterplot"
-                  queryParamsHandling="preserve">Scatter Plot</eui-linkbutton>
-  <eui-linkbutton *ngIf="is_instructor()"
-                  [selected]="is_current('/grouping')"
-                  [title]="'Go to group generator.'"
-                  routerLink="/grouping"
-                  queryParamsHandling="preserve">Groups</eui-linkbutton>
-  <eui-linkbutton *ngIf="is_instructor()"
-                  [selected]="is_current('/report')"
-                  [title]="'Go to report generator.'"
-                  routerLink="/report"
-                  queryParamsHandling="preserve">Reports</eui-linkbutton>
-</nav>
--->
