--- a/classroom/src/app/boxplot-graph/boxplot-graph.component.html
+++ b/classroom/src/app/boxplot-graph/boxplot-graph.component.html
@@ -1,90 +1,100 @@
-<eui-datagrid *ngIf="boxplot" [data]="boxplot.bpdata" [style.width]="'500px'"
-              [(selection)]="selection" selectionMode="single"
-              (selectionChange)="handle_selection()">
-  <eui-grid-column field="category_label" title="Category" width="20ch">
-  </eui-grid-column>
-  <eui-grid-column width="300px">
-    <ng-template euiHeaderTemplate>
-      <svg width="300px" height="30px">
+<table mat-table matSort #box_plot_table *ngIf="boxplot_data"
+       #boxplotSort=matSort
+       [dataSource]="boxplot_data">
+  <ng-container matColumnDef="category_label">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
+    <td mat-cell *matCellDef="let row">{{row.category_label}}</td>
+  </ng-container>
+  <ng-container matColumnDef="boxplot">
+    <th mat-header-cell *matHeaderCellDef>
+      <svg xmlns="http://www.w3.org/2000/svg"
+           [style.width]="_box_options.width+'px'"
+           [style.height]="_box_options.height+'px'">
         <desc>Linear scale ruler from 0 to {{x.tickFormat(10)(x.ticks(10)[10])}}.</desc>
-        <g fill="none" font-size="10" font-family="sans-serif" font-weight="normal" text-anchor="middle">
-          <line stroke="currentColor" [attr.x1]="scale_x(0)" [attr.x2]="scale_x(max_value)"
+        <g fill="none" font-size="9"
+           font-weight="normal" text-anchor="middle">
+          <line stroke="currentColor" [attr.x1]="scale_x(0)"
+                [attr.x2]="scale_x(max_value)"
                 [attr.y1]="17" [attr.y2]="17"/>
           <g class="tick" *ngFor="let tick of x.ticks(10); index as i;">
-
-            <line stroke="currentColor" [attr.x1]="x(tick)" [attr.x2]="x(tick)" y1="12" y2="17"/>
-            <text [attr.x]="x(tick)" [attr.y]="11" fill="black">{{x.tickFormat(10)(tick)}}</text>
+            <line stroke="currentColor"
+                  [attr.x1]="x(tick)" [attr.x2]="x(tick)"
+                  y1="12" y2="17"/>
+            <text [attr.x]="x(tick)" [attr.y]="11"
+                  fill="currentColor">{{x.tickFormat(10)(tick)}}</text>
           </g>
         </g>
       </svg>
-    </ng-template>
-    <ng-template euiCellTemplate let-row>
-      <div euiTooltip="Minimum={{percent(row.min)}};  First Quantile={{percent(row.q1)}};  Median={{percent(row.q2)}};  Third Quantile={{percent(row.q3)}};  Maximum={{percent(row.max)}}">
-        <svg class="box_plot_item" [attr.width]="'300px'" [attr.height]="'30px'"
-             [attr.data-min]="row.lifence" [attr.data-max]="row.uifence"
-             [attr.data-q1]="row.q1" [attr.data-q2]="row.q1" [attr.data-q3]="row.q3">
-          <desc>A box plot where the minimum is {{percent(row.lifence)}},
-            the first quantile is {{percent(row.q1)}},
-            the mean is {{percent(row.q2)}},
-            the third quantile is {{percent(row.q3)}},
-            and the maximum is {{percent(row.uifence)}}.
-          </desc>
-          <!-- Base line -->
-          <line [attr.x1]="scale_x(row.lifence)" [attr.x2]="scale_x(row.uifence)"
-                [attr.y1]="scale_y(0.5)" [attr.y2]="scale_y(0.5)"
-                [style.stroke]="'#3c3c3c'"
-                [style.stroke-width]="'1px'"/>
-          <!-- Q1 to Q3 -->
-          <rect [attr.x]="scale_x(row.q1)"
-                [attr.y]="scale_y(0.1)"
-                [attr.height]="scale_y(0.9)-scale_y(0.1)"
-                [attr.width]="scale_x(row.q3) - scale_x(row.q1)"
-                [attr.fill]="'#EEEEEE'"
-                [attr.stroke]="'#3C3C3C'"
-                [attr.stroke-width]="1"/>
-          <!-- Mean -->
-          <line [attr.x1]="scale_x(row.q2)" [attr.x2]="scale_x(row.q2)"
-                [attr.y1]="scale_y(0.1)" [attr.y2]="scale_y(0.9)"
-                [style.stroke]="'#3c3c3c'"
-                [style.stroke-width]="1"/>
-          <!-- Minimum -->
-          <line [attr.x1]="scale_x(row.lifence)" [attr.x2]="scale_x(row.lifence)"
-                [attr.y1]="scale_y(0.25)" [attr.y2]="scale_y(0.75)"
-                [style.stroke]="'#3c3c3c'"
-                [style.stroke-width]="1"/>
-          <!-- Maximum -->
-          <line [attr.x1]="scale_x(row.uifence)" [attr.x2]="scale_x(row.uifence)"
-                [attr.y1]="scale_y(0.25)" [attr.y2]="scale_y(0.75)"
-                [style.stroke]="'#3c3c3c'"
-                [style.stroke-width]="1"/>
-          <!-- Minimum -->
-          <!--<line [attr.x1]="scale_x(row.min)" [attr.x2]="scale_x(row.min)"
-              [attr.y1]="scale_y(0.25)" [attr.y2]="scale_y(0.75)"
-              [style.stroke]="'pink'"
-              [style.stroke-width]="1"/>-->
-          <!-- Maximum -->
-          <!--<line [attr.x1]="scale_x(row.max)" [attr.x2]="scale_x(row.max)"
-              [attr.y1]="scale_y(0.25)" [attr.y2]="scale_y(0.75)"
-              [style.stroke]="'pink'"
-              [style.stroke-width]="1"/>-->
-          <g>
-            <a (click)="open('stv/'+out.pointtitle)"
-               *ngFor="let out of get_outliers(row.category)">
-              <circle [attr.cx]="scale_x(out.value)" [attr.cy]="scale_y(0.5)"
-                      [attr.r]="scale_y(0.1)" [style.fill]="'#52be80'"
-                      [style.stroke-width]="1" [style.stroke]="'#eeeeee'"/>
-            </a>
-          </g>
-        </svg>
-      </div>
-    </ng-template>
-  </eui-grid-column>
-</eui-datagrid>
+    </th>
+    <td mat-cell *matCellDef="let row">
+      <svg class="box_plot_item"
+           [attr.width]="_box_options.width+'px'"
+           [attr.height]="_box_options.height+'px'"
+           [attr.data-min]="row.lifence"
+           [attr.data-q1]="row.q1"
+           [attr.data-q2]="row.q2"
+           [attr.data-q3]="row.q3"
+           [attr.data-max]="row.uifence"
+           matTooltip="Minimum={{percent(row.min)}};  First Quantile={{percent(row.q1)}};  Median={{percent(row.q2)}};  Third Quantile={{percent(row.q3)}};  Maximum={{percent(row.max)}}">
+        <desc>A box plot where the minimum is {{percent(row.lifence)}},
+          the first quantile is {{percent(row.q1)}},
+          the median is {{percent(row.q2)}},
+          the third quantile is {{percent(row.q3)}},
+          and the maximum is {{percent(row.uifence)}}.
+        </desc>
+        <!-- Base line -->
+        <line [attr.x1]="scale_x(row.lifence)"
+              [attr.x2]="scale_x(row.uifence)"
+              [attr.y1]="scale_y(0.5)"
+              [attr.y2]="scale_y(0.5)"
+              [style.stroke]="'#3c3c3c'"
+              [style.stroke-width]="'1px'"/>
+        <!-- Q1 to Q3 -->
+        <rect [attr.x]="scale_x(row.q1)"
+              [attr.y]="scale_y(0.1)"
+              [attr.height]="scale_y(0.9) - scale_y(0.1)"
+              [attr.width]="scale_x(row.q3) - scale_x(row.q1)"
+              [attr.fill]="'#EEEEEE'"
+              [attr.stroke]="'#3C3C3C'"
+              [attr.stroke-width]="1"/>
+        <!-- Median -->
+        <line [attr.x1]="scale_x(row.q2)"
+              [attr.x2]="scale_x(row.q2)"
+              [attr.y1]="scale_y(0.1)"
+              [attr.y2]="scale_y(0.9)"
+              [style.stroke]="'#3c3c3c'"
+              [style.stroke-width]="1"/>
+        <!-- Minimum -->
+        <line [attr.x1]="scale_x(row.lifence)"
+              [attr.x2]="scale_x(row.lifence)"
+              [attr.y1]="scale_y(0.25)"
+              [attr.y2]="scale_y(0.75)"
+              [style.stroke]="'#3c3c3c'"
+              [style.stroke-width]="1"/>
+        <!-- Maximum -->
+        <line [attr.x1]="scale_x(row.uifence)"
+              [attr.x2]="scale_x(row.uifence)"
+              [attr.y1]="scale_y(0.25)"
+              [attr.y2]="scale_y(0.75)"
+              [style.stroke]="'#3c3c3c'"
+              [style.stroke-width]="1"/>
+        <g>
+          <a *ngFor="let out of get_outliers(row.category)"
+             (click)="open('stv/'+out.pointtitle)">
+            <circle [attr.cx]="scale_x(out.value)"
+                    [attr.cy]="scale_y(0.5)"
+                    [attr.r]="scale_y(0.1)"
+                    [style.fill]="'#52be80'"
+                    [style.stroke-width]="1"
+                    [style.stroke]="'#eeeeee'"/>
+          </a>
+        </g>
+      </svg>
+    </td>
+  </ng-container>
 
-<!--<svg class="boxplot" [attr.width]="options.width" [attr.height]="options.height">
-  <g class="boxplot_wait">
-    <text y="50%">Please wait, loading...</text>
-  </g>
-  <g class="boxplot_data"></g>
-</svg>
--->
+  <tr mat-header-row *matHeaderRowDef="displayColumns; sticky: false"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayColumns;"
+      [class.selected]="selection.isSelected(row)"
+      (click)="handle_selection(row)"></tr>
+</table>
