--- a/classroom/src/app/about/about.component.html
+++ b/classroom/src/app/about/about.component.html
@@ -1,22 +1,112 @@
-<h1 mat-dialog-title class="header">DocuScope Project</h1>
+<h1 mat-dialog-title class="header">About DocuScope Classroom @ CMU</h1>
 <div mat-dialog-content>
-  DocuScope is a text analysis environment with a suite of interactive
-  visualization tools for corpus-based rhetorical
-  analysis. The
-  <a href="https://www.cmu.edu/dietrich/english/research/docuscope.html">DocuScope Project</a>
-  began in 1998 as a result of collaboration between David
-  Kaufer and Suguru Ishizaki at <a href="http://www.cmu.edu/">Carnegie
-  Mellon University</a>. David created what we call the generic
-  (default) dictionary, consisting of over 40 million linguistic
-  patterns of English classified into over 100 categories of
-  rhetorical effects. Suguru designed and implemented the analysis and
-  visualization software, which can annotate a corpus of text against
-  any dictionary of regular strings that are classified into a
-  hierarchy of rhetorical effects. While we designed DocuScope as a
-  tool for rhetorical analysis, we also found that it was extremely
-  effective for developing the dictionary in a systematic fashion.
+  <article>
+    <section>
+      <h1>DocuScope Classroom @ CMU</h1>
+      <p>
+        <dfn>DocuScope Classroom @ CMU</dfn> is a university-wide
+        resource for writing education. It is an interactive text analysis and
+        visualization environment that supports writing instruction in
+        foundational writing courses and upper-level discipline specific
+        courses at
+        <a href="https://www.cmu.edu/">Carnegie Mellon University</a>.
+      </p>
+      <p>
+        DocuScope Classroom is part of Carnegie Mellon’s instructional
+        <strong>sidecar project</strong> led by Richard Scheines, Dean of
+        the Dietrich College of Humanities and Social Science and Marsha
+        Lovett, Director, Eberly Center for Teaching Excellence &amp;
+        Educational Innovation. Sidecars for writing education embody core
+        competencies of our foundation-level writing courses that can be
+        delivered and adapted just-in-time to upper-level writing courses
+        and workshops.
+      </p>
+      <p>
+        The core of our sidecar approach to writing is the concept of a
+        lens—a visualization that helps students see how their writing of
+        even a single proposal is made up of hundreds, thousands, even tens
+        of thousands of small composing decisions below their conscious
+        awareness. Experienced writers have enough tacit awareness of these
+        decisions to help them with self-assessment and revision. But
+        student writers often need cueing to become aware of this level of
+        decision-making as a resource for self-assessment and revision. As a
+        visualization, a lens provides these external cues.
+      </p>
+      <p>
+        DocuScope Classroom is built on
+        the <a href="https://www.cmu.edu/dietrich/english/research/docuscope.html">DocuScope Project</a>
+        began in 1998 as a collaboration between David Kaufer
+        and Suguru Ishizaki in the Department of English at Carnegie Mellon
+        University. They created a computer-aided text analysis environment
+        called DocuScope with a suite of interactive visualization tools for
+        corpus-based and temporal rhetorical analysis. Kaufer created what
+        we call the generic (default) dictionary, consisting now of over 60
+        million unique patterns (words or word sequences) of English
+        classified into over 43,000 categories of semantic-rhetorical
+        effects.
+      </p>
+    </section>
+    <section>
+      <h1>Project Contributors<a href="#order_note">*</a></h1>
+      <ul class="contrib">
+        <li>Department of English - CMU
+          <ul>
+            <li>David Kauer</li>
+            <li>Alex Helberg</li>
+            <li>Suguru Ishizaki</li>
+            <li>Maria Poznahovska</li>
+            <li>Hannah Ringler</li>
+            <li>Andreea Ritivoi</li>
+            <li>Danielle Wetzel</li>
+            <li>Necia Werner</li>
+            <li>Joanna Wolfe</li>
+            <li>Heidi Wright</li>
+          </ul>
+        </li>
+        <li>Department of Philosophy - CMU
+          <ul>
+            <li>Michael Ringenberg</li>
+          </ul>
+        </li>
+        <li>Department of Statistics and Data Sciences - CMU
+          <ul>
+            <li>Joel Greenhouse</li>
+            <li>Howard Seltman</li>
+          </ul>
+        </li>
+        <li>Eberly Center for Teaching Excellence &amp; Educational
+        Innovation - CMU
+          <ul>
+            <li>Judy Brooks</li>
+            <li>Jessica Harrell</li>
+            <li>Lynn Kojtek</li>
+            <li>Zachary Mineroff</li>
+            <li>Martin Van Velsen</li>
+          </ul>
+        </li>
+        <li>Open Learning Initiative (OLI) - CMU
+          <ul>
+            <li>Norman Bier</li>
+          </ul>
+        </li>
+      </ul>
+      <aside>
+        <p id="order_note">* Names are listed in alphabetical order.</p>
+      </aside>
+    </section>
+    <section>
+      <h1>Acknowledgements</h1>
+      <p>
+        This project is partially funded by the generous support of the
+        <a href="https://mellon.org/">A. W. Mellon Foundation</a>,
+        the Macaulay Family Foundation,
+        <a href="https://www.psc.edu/">Pittsburgh Supercomputing Center</a>,
+        and the <a href="https://www.cmu.edu/simon/">Simon Initiative</a>.
+      </p>
+    </section>
+  </article>
 </div>
 <div mat-dialog-actions class="actions">
-  <button mat-raised-button cdkFocusInitial (click)="onNoClick()"><mat-icon>exit_to_app</mat-icon>Done</button>
-  <!--<eui-linkbutton iconCls="icon-ok" (click)="about_modal.close()">Ok</eui-linkbutton>-->
+  <button mat-raised-button cdkFocusInitial
+  (click)="onNoClick()"><mat-icon>exit_to_app</mat-icon>Done</button>
 </div>
