--- a/classroom/src/app/rank/rank.component.html
+++ b/classroom/src/app/rank/rank.component.html
@@ -4,11 +4,11 @@
   <mat-card-title>Frequency</mat-card-title>
   <mat-card-subtitle>Frequency of the selected category for each document.</mat-card-subtitle>
   <mat-card-subtitle>The bar represents the difference from the median value and is the average number of instances per 100 words.</mat-card-subtitle>
-  <mat-card-content *ngIf="categories">
+  <mat-card-content *ngIf="categories.size > 0">
     <aside class="select_category_box">
       <label for="select_category" class="select_category_label">Category:</label>
       <select id="select_category" [(ngModel)]="category" (ngModelChange)="on_select($event)">
-        <option *ngFor="let c of categories" [value]="c.category">{{c.category_label}}</option>
+        <option *ngFor="let c of categories | keyvalue" [value]="c.key">{{c.value}}</option>
       </select>
     </aside>
     <article>
