--- a/classroom/src/app/rank/rank.component.css
+++ b/classroom/src/app/rank/rank.component.css
@@ -1,14 +1,19 @@
+.tool {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+}
+app-nav {
+  flex: 0 1 auto;
+}
 .container {
+  flex: 1 1 auto;
   margin: 5px;
-  height: calc(100vh - 64.5px - 49px - 10px);
   overflow: auto;
 }
 .select_category_box {
   margin-bottom: 18px;
-}
-.select_category_label {
-  margin-bottom: 5px;
-  margin-right: 1ch;
+  margin-left: 3em;
 }
 .rank_container {
   margin-left: 20px;
