--- a/classroom/src/app/rank/rank.component.html
+++ b/classroom/src/app/rank/rank.component.html
@@ -1,29 +1,33 @@
-<app-nav></app-nav>
-<mat-card *ngIf="corpus" class="container">
-  <!--<h2>\{\{corpus.course\}\} - \{\{corpus.assignment\}\} Rankings</h2>-->
-  <mat-card-title>Frequency</mat-card-title>
-  <mat-card-subtitle>Frequency of the selected category for each document.</mat-card-subtitle>
-  <mat-card-subtitle>The bar represents the difference from the median value and is the average number of instances per 100 words.</mat-card-subtitle>
-  <mat-card-content *ngIf="categories.size > 0">
-    <aside class="select_category_box">
-      <label for="select_category" class="select_category_label">Category:</label>
-      <select id="select_category" [(ngModel)]="category" (ngModelChange)="on_select($event)">
-        <option *ngFor="let c of categories | keyvalue" [value]="c.key">{{c.value}}</option>
-      </select>
-    </aside>
-    <article>
-      <app-rank-graph [rank_data]="data" [max_value]="max_value"></app-rank-graph>
-      <!--<google-chart #rankTable *ngIf="rank_data"
-                    [type]="'Table'"
-                    [columnNames]="['Name', 'Frequency']"
-                    [data]="rank_data"
-                    ></google-chart>--><!--(select)=""-->
-      <!--<google-chart #rank *ngIf="rank_data"
-                    [title]="'Ranking by '+get_label(category)"
-                    [type]="'BarChart'"
-                    [columnNames]="['Name', 'Frequency']"
-                    [data]="rank_data"
-                    [options]="options"></google-chart>-->
-    </article>
-  </mat-card-content>
-</mat-card>
+<div class="tool">
+  <app-nav></app-nav>
+  <mat-card *ngIf="corpus" class="container">
+    <!--<h2>\{\{corpus.course\}\} - \{\{corpus.assignment\}\} Rankings</h2>-->
+    <mat-card-title>Frequency</mat-card-title>
+    <mat-card-subtitle>Frequency of the selected category for each document.</mat-card-subtitle>
+    <mat-card-subtitle>The bar represents the difference from the median value and is the average number of instances per 100 words.</mat-card-subtitle>
+    <mat-card-content *ngIf="categories.size > 0">
+      <aside class="select_category_box">
+        <mat-form-field>
+          <mat-label for="select_category">Category</mat-label>
+          <select matNativeControl required id="select_category" [(ngModel)]="category" (ngModelChange)="on_select($event)">
+            <option *ngFor="let c of categories | keyvalue" [value]="c.key">{{c.value}}</option>
+          </select>
+        </mat-form-field>
+      </aside>
+      <article>
+        <app-rank-graph [rank_data]="data" [max_value]="max_value"></app-rank-graph>
+        <!--<google-chart #rankTable *ngIf="rank_data"
+            [type]="'Table'"
+            [columnNames]="['Name', 'Frequency']"
+            [data]="rank_data"
+            ></google-chart>--><!--(select)=""-->
+        <!--<google-chart #rank *ngIf="rank_data"
+            [title]="'Ranking by '+get_label(category)"
+            [type]="'BarChart'"
+            [columnNames]="['Name', 'Frequency']"
+            [data]="rank_data"
+            [options]="options"></google-chart>-->
+      </article>
+    </mat-card-content>
+  </mat-card>
+</div>
