--- a/classroom/src/app/grouping/grouping.component.html
+++ b/classroom/src/app/grouping/grouping.component.html
@@ -9,7 +9,8 @@
           <h4>Group Parameters:</h4>
           <div>
             <mat-form-field>
-              <input matInput type="number" placeholder="Desired Group Sizes" [(ngModel)]="group_size" min="2" max="4">
+              <input matInput type="number" placeholder="Desired Group Sizes"
+                     [(ngModel)]="group_size" [min]="size_min" [max]="size_max">
             </mat-form-field>
           </div>
           <button mat-raised-button color="primary" class="go_button"
