Assignment information header working. It does not populate on all routes, but it does persist. Refactor Corpus to string[]. Lazy retrieval of introduction text.

--- a/classroom/src/app/app.component.html
+++ b/classroom/src/app/app.component.html
@@ -1,15 +1,5 @@
 <!-- Title Banner -->
-<header>
-  <mat-toolbar color="warn" role="heading" class="header"><!-- color="primary" -->
-    <span>{{title}}</span>
-    <span class="spacer"></span>
-    <div></div>
-    <span class="spacer"></span>
-    <button mat-icon-button (click)="openAbout()">
-      <mat-icon>info</mat-icon>
-    </button>
-  </mat-toolbar>
-</header>
+<app-header></app-header>
 <!-- Loading screen cover -->
 <ngx-ui-loader></ngx-ui-loader>
 <!-- content -->
