--- a/classroom/src/app/report/report.component.html
+++ b/classroom/src/app/report/report.component.html
@@ -6,11 +6,11 @@
     <mat-card-subtitle>Generate reports using the below text.</mat-card-subtitle>
     <mat-card-content class="report_form">
       <mat-form-field class="edit_textarea">
-        <textarea matInput placeholder="Customize the introduction text:" [(ngModel)]="corpus.intro" rows="6" cols="80"></textarea>
+        <textarea matInput placeholder="Customize the introduction text:" [(ngModel)]="intro" rows="6" cols="80"></textarea>
       </mat-form-field>
       <br>
       <mat-form-field class="edit_textarea">
-        <textarea matInput placeholder="Customize the introduction to the text analysis section" [(ngModel)]="corpus.stv_intro" rows="6" cols="80"></textarea>
+        <textarea matInput placeholder="Customize the introduction to the text analysis section" [(ngModel)]="stv_intro" rows="6" cols="80"></textarea>
       </mat-form-field>
       <br>
       <button mat-raised-button color="primary"
