--- a/classroom/src/app/header/header.component.html
+++ b/classroom/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <mat-toolbar color="warn" role="heading" class="header"><!-- color="primary" -->
-    <span>{{title}}</span>
+    <span>{{title}} {{institution}}</span>
     <span class="spacer"></span>
     <div class="assignment">
       <div *ngIf="course" class="item" matTooltip="{{course}}">
