--- a/classroom/src/app/boxplot/boxplot.component.html
+++ b/classroom/src/app/boxplot/boxplot.component.html
@@ -3,12 +3,12 @@
   <mat-card *ngIf="corpus" class="container">
     <mat-card-title>Box Plot</mat-card-title>
     <mat-card-subtitle>Shows the distribution of various pattern types.</mat-card-subtitle>
-    <mat-card-subtitle>Units are average number of instances per 100 words.</mat-card-subtitle>
+    <mat-card-subtitle>Units are average number of instances per {{unit}} words.</mat-card-subtitle>
     <mat-card-content class="graph_container">
-      <app-boxplot-graph [boxplot]="data" [max_value]="max_value" (selected_category)="onSelectCategory($event)"></app-boxplot-graph>
+      <app-boxplot-graph [boxplot]="data" [unit]="unit" (selected_category)="onSelectCategory($event)"></app-boxplot-graph>
       <div>
-        <angular-tag-cloud *ngIf="cloud_data" [data]="cloud_data"></angular-tag-cloud>
-        <app-rank-graph *ngIf="rank_data" [rank_data]="rank_data" [max_value]="max_value"></app-rank-graph>
+        <angular-tag-cloud *ngIf="cloud_data && show_cloud" [data]="cloud_data"></angular-tag-cloud>
+        <app-rank-graph *ngIf="selected_category" [data]="data" [category]="selected_category" [unit]="unit"></app-rank-graph>
       </div>
     </mat-card-content>
   </mat-card>
