--- a/classroom/src/app/rank-graph/rank-graph.component.html
+++ b/classroom/src/app/rank-graph/rank-graph.component.html
@@ -1,6 +1,6 @@
-<mat-card *ngIf="rank_data">
-  <mat-card-title *ngIf="rank_data.category_name">
-    Category: {{rank_data.category_name}}
+<mat-card *ngIf="category">
+  <mat-card-title>
+    Category: {{category.name}}
   </mat-card-title>
   <mat-card-content>
     <mat-table matSort #rankSort=matSort matSortDisableClear
@@ -10,40 +10,44 @@
     <mat-header-cell *matHeaderCellDef mat-sort-header class="rank">Rank</mat-header-cell>
     <mat-cell *matCellDef="let element; let rowIndex = index;" class="rank">{{rowIndex+1}}</mat-cell>
   </ng-container>
-  <ng-container matColumnDef="text">
+  <ng-container matColumnDef="title">
     <mat-header-cell *matHeaderCellDef mat-sort-header class="name">Name</mat-header-cell>
-    <mat-cell *matCellDef="let element" class="name"><a [ngClass]="{'student_col': true, 'model_entry': element.ownedby === 'instructor'}" (click)="open(element.index)"> {{element.text}}</a></mat-cell>
+    <mat-cell *matCellDef="let element" class="name"><a [ngClass]="{'student_col': true, 'model_entry': element.ownedby === 'instructor'}" (click)="open(element.id)"> {{element.title}}</a></mat-cell>
   </ng-container>
   <ng-container matColumnDef="value">
-    <mat-header-cell *matHeaderCellDef mat-sort-header class="value">Value</mat-header-cell>
-    <mat-cell *matCellDef="let element" class="value">{{(100*element.value).toFixed(2)}}</mat-cell>
+    <mat-header-cell *matHeaderCellDef mat-sort-header start="desc" class="value">Value</mat-header-cell>
+    <mat-cell *matCellDef="let element" class="value">{{element.value.toFixed(2)}}</mat-cell>
   </ng-container>
   <ng-container matColumnDef="meter">
     <mat-header-cell *matHeaderCellDef></mat-header-cell>
     <mat-cell *matCellDef="let element">
-      <meter [max]="max_value*100" [value]="element.value*100">{{element.value*100}}</meter>
+      <meter [max]="max_value" [value]="element.value">{{element.value}}</meter>
     </mat-cell>
   </ng-container>
   <ng-container matColumnDef="bar">
     <mat-header-cell *matHeaderCellDef class="bar">
-      <svg [attr.width]="options.width+'px'" height="30px">
+      <svg xmlns="http://www.w3.org/2000/svg"
+           [style.width]="options.width+'px'"
+           [style.height]="options.height+'px'">
         <desc>Linear scale ruler from 0 to {{x.tickFormat(10)(x.ticks(10)[10])}}.</desc>
-        <g fill="none" font-size="10" font-family="sans-serif" font-weight="normal" text-anchor="middle">
-          <line stroke="currentColor" [attr.x1]="x(0)" [attr.x2]="scale(max_value)"
-                [attr.y1]="20" [attr.y2]="20"/>
+        <g fill="none" font-size="9" font-family="sans-serif" font-weight="normal" text-anchor="middle">
+          <line stroke="currentColor" [attr.x1]="x(0)" [attr.x2]="x(max_value)"
+                [attr.y1]="17" [attr.y2]="17"/>
           <g class="tick" *ngFor="let tick of x.ticks(10); index as i;">
-            <line stroke="currentColor" [attr.x1]="x(tick)" [attr.x2]="x(tick)" y1="15" y2="20"/>
-            <text [attr.x]="x(tick)" [attr.y]="14" fill="currentColor">{{x.tickFormat(10)(tick)}}</text>
+            <line stroke="currentColor" [attr.x1]="x(tick)" [attr.x2]="x(tick)"
+                  y1="12" y2="17"/>
+            <text [attr.x]="x(tick)" [attr.y]="11" fill="currentColor">{{x.tickFormat(10)(tick)}}</text>
           </g>
         </g>
       </svg>
     </mat-header-cell>
     <mat-cell *matCellDef="let element" class="bar">
       <svg [attr.width]="options.width+'px'" [attr.height]="options.height+'px'"
-           [attr.data-value]="element.value*100">
-        <desc>A bar representing a value of {{element.value*100}}</desc>
-        <rect [attr.x]="x(0)" [attr.y]="options.margins.top"
-              [attr.height]="options.height-(options.margins.top+options.margins.bottom)" [attr.width]="scale(element.value)-x(0)"
+           [attr.data-value]="element.value">
+        <desc>A bar representing a value of {{element.value}}</desc>
+        <rect [attr.x]="left" [attr.y]="options.margins.top"
+              [attr.height]="options.height-(options.margins.top+options.margins.bottom)"
+              [attr.width]="x(element.value)-left"
               [attr.fill]="element.ownedby === 'instructor' ? 'rgba(0,0,255,.4)' :'#EEEEEEEE'"
               [attr.stroke]="'#3C3C3C'" [attr.stroke-width]="1"/>
       </svg>
@@ -51,14 +55,16 @@
   </ng-container>
   <ng-container matColumnDef="meanbar">
     <mat-header-cell *matHeaderCellDef class="bar">
-      <svg [attr.width]="options.width+'px'" height="30px">
+      <svg xmlns="http://www.w3.org/2000/svg"
+        [style.width]="options.width+'px'" [style.height]="options.height+'px'">
         <desc>Linear scale ruler from 0 to {{x.tickFormat(10)(x.ticks(10)[10])}}.</desc>
-        <g fill="none" font-size="10" font-family="sans-serif" font-weight="normal" text-anchor="middle">
-          <line stroke="currentColor" [attr.x1]="x(0)" [attr.x2]="scale(max_value)"
-                [attr.y1]="20" [attr.y2]="20"/>
+        <g fill="none" font-size="9" font-family="sans-serif" font-weight="normal" text-anchor="middle">
+          <line stroke="currentColor" [attr.x1]="left" [attr.x2]="right"
+                [attr.y1]="17" [attr.y2]="17"/>
           <g class="tick" *ngFor="let tick of x.ticks(10); index as i;">
-            <line stroke="currentColor" [attr.x1]="x(tick)" [attr.x2]="x(tick)" y1="15" y2="20"/>
-            <text [attr.x]="x(tick)" [attr.y]="14" fill="currentColor">{{x.tickFormat(10)(tick)}}</text>
+            <line stroke="currentColor" [attr.x1]="x(tick)" [attr.x2]="x(tick)"
+            y1="12" y2="17"/>
+            <text [attr.x]="x(tick)" [attr.y]="11" fill="currentColor">{{x.tickFormat(10)(tick)}}</text>
           </g>
         </g>
       </svg>
@@ -66,15 +72,15 @@
     <mat-cell *matCellDef="let element" class="bar">
       <div [matTooltip]="bar_tip(element.value)">
       <svg [attr.width]="options.width+'px'" [attr.height]="options.height+'px'"
-           [attr.data-value]="element.value*100">
-        <desc>A bar that shows the difference of {{element.value*100}} from the median of {{rank_data.median*100}}</desc>
-        <line [attr.x1]="scale(rank_data.median)" [attr.x2]="scale(rank_data.median)"
+           [attr.data-value]="element.value">
+        <desc>A bar that shows the difference of {{element.value}} from the median of {{median}}</desc>
+        <line [attr.x1]="x(median)" [attr.x2]="x(median)"
               [attr.y1]="0" [attr.y2]="'100%'"
               [style.stroke]="'black'" [style.stroke-width]="'1px'"/>
-        <rect [attr.x]="scale(mean_start(element.value))"
+        <rect [attr.x]="x(mean_start(element.value))"
               [attr.y]="options.margins.top"
               [attr.height]="options.height-(options.margins.top+options.margins.bottom)"
-              [attr.width]="scale(mean_width(element.value))-x(0)"
+              [attr.width]="x(mean_width(element.value))-x(0)"
               [attr.fill]="element.ownedby === 'instructor' ? 'rgba(0,0,255,.4)' :'#EEEEEEEE'"
               [attr.stroke]="'#3C3C3C'" [attr.stroke-width]="1"/>
       </svg>
