--- a/classroom/src/app/rank/rank.component.html
+++ b/classroom/src/app/rank/rank.component.html
@@ -4,18 +4,18 @@
     <!--<h2>\{\{corpus.course\}\} - \{\{corpus.assignment\}\} Rankings</h2>-->
     <mat-card-title>Frequency</mat-card-title>
     <mat-card-subtitle>Frequency of the selected category for each document.</mat-card-subtitle>
-    <mat-card-subtitle>The bar represents the difference from the median value and is the average number of instances per 100 words.</mat-card-subtitle>
-    <mat-card-content *ngIf="categories.size > 0">
+    <mat-card-subtitle>The bar represents the difference from the median value and is the average number of instances per {{unit}} words.</mat-card-subtitle>
+    <mat-card-content *ngIf="data">
       <aside class="select_category_box">
         <mat-form-field>
           <mat-label for="select_category">Category</mat-label>
-          <select matNativeControl required id="select_category" [(ngModel)]="category" (ngModelChange)="on_select($event)">
-            <option *ngFor="let c of categories | keyvalue" [value]="c.key">{{c.value}}</option>
+          <select matNativeControl required id="select_category" [(ngModel)]="selected_category" (ngModelChange)="on_select($event)">
+            <option *ngFor="let c of categories" [value]="c.id">{{c.name}}</option>
           </select>
         </mat-form-field>
       </aside>
       <article>
-        <app-rank-graph [rank_data]="data" [max_value]="max_value"></app-rank-graph>
+        <app-rank-graph *ngIf="category" [data]="data" [unit]="unit" [category]="category"></app-rank-graph>
         <!--<google-chart #rankTable *ngIf="rank_data"
             [type]="'Table'"
             [columnNames]="['Name', 'Frequency']"
