Tests compiling (53 errors)

--- a/classroom/src/app/about/about.component.html
+++ b/classroom/src/app/about/about.component.html
@@ -4,7 +4,7 @@
     <section>
       <h1>DocuScope Classroom @ CMU</h1>
       <p>
-        <dfn>DocuScope Classroom @ CMU</dfn> is a university-wide
+        <dfn>{{title}} @ {{institution}}</dfn> is a university-wide
         resource for writing education. It is an interactive text analysis and
         visualization environment that supports writing instruction in
         foundational writing courses and upper-level discipline specific
@@ -12,7 +12,7 @@
         <a href="https://www.cmu.edu/">Carnegie Mellon University</a>.
       </p>
       <p>
-        DocuScope Classroom is part of Carnegie Mellon’s instructional
+        {{title}} is part of Carnegie Mellon’s instructional
         <strong>sidecar project</strong> led by Richard Scheines, Dean of
         the Dietrich College of Humanities and Social Science and Marsha
         Lovett, Director, Eberly Center for Teaching Excellence &amp;
@@ -34,7 +34,7 @@
       </p>
       <p>
         DocuScope Classroom is built on
-        the <a href="https://www.cmu.edu/dietrich/english/research/docuscope.html">DocuScope Project</a>
+        the <a href="{{homepage}}">DocuScope Project</a>
         began in 1998 as a collaboration between David Kaufer
         and Suguru Ishizaki in the Department of English at Carnegie Mellon
         University. They created a computer-aided text analysis environment
